<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient_background">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/news_detail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Пожарная безопастность"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/imageView_mcs"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:src="@drawable/mcs"
            android:contentDescription="@string/mcs_image_description"/>

        <ImageView
            android:id="@+id/imageView_mcsv2"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:src="@drawable/mcsv2"
            android:contentDescription="@string/mcsv2_image_description"/>

        <ImageView
            android:id="@+id/imageView_mcsv3"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:src="@drawable/mcsv3"
            android:contentDescription="@string/mcsv3_image_description"/>

        <ImageView
            android:id="@+id/imageView_mcsv4"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:src="@drawable/mcsv4"
            android:contentDescription="@string/mcsv4_image_description"/>

        <ImageView
            android:id="@+id/imageView_kapital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/kapital"
            android:scaleType="fitCenter"
            android:visibility="gone"
            android:contentDescription="@string/description_of_kapital_image" />


        <ImageView
            android:id="@+id/imageView_promej"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/news_detail_title"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/description_of_promej_image"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imageView_tarif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/news_detail_title"
            android:layout_marginTop="16dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/description_of_tarif_image"
            android:visibility="gone" />
        <TextView
            android:id="@+id/news_detail_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView_tarif"
            android:layout_marginTop="16dp"
            android:textSize="16sp" />

    </LinearLayout>



</LinearLayout>